--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,59 @@
-# .gitignore
+# -------------------------
+# Environment Variables
+# -------------------------
+.env
+.env.local
+.env.production
+.env.development
 src/.env
+
+# -------------------------
+# Firebase / Google Secrets
+# -------------------------
+src/config/firebase_admin_sdk.json
+firebase_admin_sdk.json
+realvista-b8724-firebase-adminsdk-*.json
+*.firebase-adminsdk-*.json
+src/client_secret.json
+client_secret.json
+
+# -------------------------
+# Node.js
+# -------------------------
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# -------------------------
+# Build output
+# -------------------------
+dist/
+build/
+tmp/
+temp/
+
+# -------------------------
+# Logs
+# -------------------------
+logs/
+*.log
+*.log.json
+
+# -------------------------
+# OS system files
+# -------------------------
+.DS_Store
+Thumbs.db
+
+# -------------------------
+# Editor folders
+# -------------------------
+.vscode/
+.idea/
+
+# -------------------------
+# TypeScript build caches
+# -------------------------
+*.tsbuildinfo
